@@ -7,6 +7,7 @@ Changes in version 1.0 RC3 (15.6.2006)
 Package org.springframework.webflow
 * Renamed TransitionSet.transitionMatches to "hasMatchingTransition".
 * A flow variable can now be annotated with arbitrary properties to influence behaviour.
+* Factored out some behaviour of TransitionSet and StateExceptionHandlerSet into CollectionUtils.
 
 Package org.springframework.webflow.builder
 * Reapplied 1.0 rc2 fix for inline flow parsing, which was lost in SourcForge CVS issues occurring between 7/5/06 and 15/5/06
